# ComfyUI-LogicUtils

./: README.md  __init__.py  autonode.py  auxilary.py  conversion.py  crypto.py  external.py  install.py  io_node.py  logic_gates.py  math_nodes.py  nodes.py  pyproject.toml  pystructure.py  randomness.py
.github/workflows/: publish.yml
exif/: exif.py
imgio/: converter.py
tests/: __init__.py  import_utils.py  test_conversion.py  test_crypto.py  test_imgio_converter.py  test_io_nodes_extras.py  test_logic_gates.py  test_math_nodes.py  test_nodes_import.py  test_randomness.py
utils/: tagger.py
web/: convert-any-2.js
webuiapi/: out_api.py
