[project]
name = "comfyui-logicutils"
description = "Nodes:UniformRandomFloat..., RandomShuffleInt, YieldableIterator..., LogicGate..., Add..., MergeString, MemoryNode, ..."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/aria1th/ComfyUI-LogicUtils"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-LogicUtils"
Icon = ""
