[project]
name = "comfyui-logicutils"
description = "Logical Utils (compare, string, boolean operations) for ComfyUI"
version = "1.5.1"
license = "MIT"

[project.urls]
Repository = "https://github.com/aria1th/ComfyUI-LogicUtils"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "angelbottomless"
DisplayName = "ComfyUI-LogicUtils"
Icon = ""
